# telegram-authorizer

./: Cargo.toml  README.md
src/: error.rs  extract.rs  layer.rs  lib.rs
src/authorizer/: embedded.rs  external.rs  mod.rs
